--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -6,6 +6,10 @@
     background-blend-mode: darken;
 }
 
+.call-to-action {
+    zoom: 130%;
+}
+
 .jumbotron-heading {
     font-size: 8vh;
 }
@@ -151,6 +155,30 @@
     width: 7rem;
 }
 
+/*PROC INLEGE SECTION*/
+.reason {
+    border: 1px solid #EEEEEE;
+    border-radius: 10px;
+    padding: 1rem;
+    height: 100%;
+}
+
+.reason-icon-background {
+    background-color: #EEEEEE;
+    width: 6.5rem;
+    height: 6.5rem;
+}
+
+.reason-title {
+    border-bottom: 2px solid #E80F88;
+    display: inline;
+    padding-bottom: 3px;
+}
+
+.reason-content {
+    padding-top: 3px;
+}
+
 @media only screen and (max-width: 780px) {
     .landing-info-wrapper {
         flex-direction: column;
@@ -172,5 +200,14 @@
   @media only screen and (max-width: 992px) {
     .nezobrazovat-na-mobilu-landing {
       display: none;
+    }
+  }
+
+  @media only screen and (max-width: 576px) {
+    .text-center-on-mobile {
+        text-align: center;
+    }
+    .jumbotron-heading {
+        font-size: 6vh;
     }
   }
