landing redesign and added reasons to use

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/bootstrap_customised.css">
     <link rel="stylesheet" href="/css/custom.css">
-    <link rel="stylesheet" href="/css/landing.css">
+    <link rel="stylesheet" href="/css/landing?sss.css">
     <!-- META TAGS -->
     <meta property="og:url"                content="https://www.inlege.cz/" />
     <meta property="og:title"              content="Studuj práva efektivně s InLege" />
@@ -64,7 +64,7 @@
                             <i class="far fa-copy fa-3x text-muted"></i>
                         </div>
                         <div>
-                            <p class="info-main"><%= numOfCards %> opakovacích kartiček</p>
+                            <p class="info-main"><%= numOfCards %> interaktivních kartiček</p>
                             <p class="info-secondary text-muted">a přibývají každý týden</p>
                         </div>
                     </div>
@@ -97,7 +97,7 @@
                                     <i class="far fa-copy fa-3x text-muted"></i>
                                 </div>
                                 <div class="col-9">
-                                    <p class="info-main"><%= numOfCards %> opakovacích kartiček</p>
+                                    <p class="info-main"><%= numOfCards %> interaktivních kartiček</p>
                                     <p class="info-secondary text-muted">a přibývají každý týden</p>
                                 </div>
                             </div>
