--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/bootstrap_customised.css">
     <link rel="stylesheet" href="/css/custom.css">
-    <link rel="stylesheet" href="/css/landing?sss.css">
+    <link rel="stylesheet" href="/css/landing.css">
     <!-- META TAGS -->
     <meta property="og:url"                content="https://www.inlege.cz/" />
     <meta property="og:title"              content="Studuj práva efektivně s InLege" />
