--- a/views/category.ejs
+++ b/views/category.ejs
@@ -65,7 +65,7 @@
 
                     <!-- ZVEREJNENE BALICKY -->
                     <% if(section.isPublic){ %> 
-                    <div class="row py-2">
+                    <div class="row py-2 section-row">
                         <div class="col-7 d-flex align-items-center">                    
                             <div>
                                 <p class="m-0"><%= section.name %></p>
