--- a/views/sections/finishedDemo.ejs
+++ b/views/sections/finishedDemo.ejs
@@ -17,8 +17,8 @@
                 
                 <hr>
                 <h4 class="mt-3">A co dál?</h4>
-                <p class="m-3">Stejně jako cvičný balíček můžeš <b>zdarma</b> procházet <b>více než 1 500 kartiček</b> z různých oborů práva. Stačí se zaregistrovat.</p>
-                <p class="m-3">A kdyby ti to nestačilo, další stovky kartiček jsou k dispozici účtem Premium.</p>
+                <p class="m-3">S InLege můžeš zdarma procházet <strong>více než 1 500 kartiček</strong> z různých oborů práva. Stačí se zaregistrovat!</p>
+                <p class="m-3">Pro ty, kteří chtějí získat maximum, máme připraveno dalších více než tisíc kartiček s předplatným Premium. Získej přístup k rozšířeným studijním materiálům a dalším funkcím a připrav se na zkoušky s jistotou!</p>
                 <p>
                     <a href="/auth/user/new" class="btn btn-lg btn-danger mt-3">Zaregistrovat se zdarma</a>
                 </p>
