--- a/views/cards/savedCards.ejs
+++ b/views/cards/savedCards.ejs
@@ -9,7 +9,7 @@
                             <h3 class="p-3 mb-0">Uložené kartičky</h3>
                         </div>
                         <div class="col-12">
-                            <p class="px-3">Kliknutím na ikonku <i class="far fa-star fa-lg"></i> (vpravo dole na každé kartičce) si kartičky můžeš <b>ukládat</b>. Pak je najdeš na této stránce rozdělené do jednotlivých kategorií <b>k dalšímu opakování</b>.</p>
+                            <p class="px-3">Kliknutím na ikonku <i class="far fa-star fa-lg"></i> (vlevo dole na každé kartičce) si kartičky můžeš <b>ukládat</b>. Pak je najdeš na této stránce rozdělené do jednotlivých kategorií <b>k dalšímu opakování</b>.</p>
                             <p class="px-3">Tato funkce je dostupná <b>s předplatným Premium</b>.</p>
                             <a href="/premium" class="btn btn-danger mb-3 mx-3">Zjistit více</a>
                         </div>
