--- a/views/category.ejs
+++ b/views/category.ejs
@@ -68,7 +68,7 @@
                     <div class="row py-2 section-row">
                         <div class="col-7 d-flex align-items-center">                    
                             <div>
-                                <p class="m-0"><%= section.name %></p>
+                                <p class="m-0 section-name"><%= section.name %></p>
                                 <p class="text-muted text-small mb-0"><%= section.shortDescription %> </p>
                                 <% if (currentUser && currentUser.admin) { %>
                                     <p class="text-muted text-small mb-0">ID sekce: <%= section._id %></p>
