--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Studuj práva efektivně s InLege</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/bootstrap_customised.css">
     <link rel="stylesheet" href="/css/custom.css">
@@ -327,7 +330,7 @@
                                     </div>
                                     <div class="col-8">
                                         <div class="ml-3">
-                                            <h5 class="reason-title">Připraven na vše</h5>
+                                            <h5 class="reason-title">Připraví tě na vše</h5>
                                             <p class="reason-content">Efektivní příprava na zkoušky, nezávisle na fázi tvého studia či profesního růstu.</p>
                                         </div>
                                     </div>
