--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>InLege</title>
+    <title>InLege - Studuj práva efektivně</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/bootstrap_customised.css">
     <link rel="stylesheet" href="/css/custom.css">
@@ -34,7 +37,7 @@
             <div class="container d-flex flex-column justify-content-center align-items-center pb-5">
                 <div class="d-flex flex-column justify-content-center align-items-center">
                     <h1 class="jumbotron-heading my-3 mt-5 text-center">InLege <span class="color-1">Premium</span></h1>
-                    <p class="lead text-center w-custom p-3 pb-5"><strong>InLege nabízí stovky kartiček zdarma. Pro opravdové fajnšmekry však máme také rozšířenou nabídku kartiček jen za pár korun měsíčně.</strong></p>
+                    <p class="lead text-center w-custom p-3 pb-5"><strong>InLege nabízí stovky kartiček zdarma. Pro opravdové fajnšmekry však máme také rozšířenou nabídku kartiček a další funkce jen za pár korun měsíčně.</strong></p>
                 </div>
                 <div class="price-table-wrapper">
                     <div class="card premium-plan-card m-4 mt-0">
