--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,3 +1,5 @@
+
+
 .navbar-brand img {
     margin-bottom: 4px;
     margin-right: 10px;
@@ -32,6 +34,10 @@
     border-style: none;
     padding: 0;
     margin: 0;
+}
+
+.section-name {
+    font-size: 1.125rem;
 }
 
 .category-box {
@@ -88,6 +94,45 @@
     font-size: 0.9rem;
 }
 
+.reason {
+    border-radius: 10px;
+    padding: 1rem;
+    height: 100%;
+}
+
+.reason-icon-background {
+    background-color: #EEEEEE;
+    width: 6.5rem;
+    height: 6.5rem;
+}
+
+.reason-title {
+    border-bottom: 2px solid #E80F88;
+    display: inline;
+    padding-bottom: 3px;
+}
+
+.reason-content {
+    padding-top: 3px;
+}
+
+.border-color {
+    border: 3px solid #E80F88;
+}
+
+.border-none {
+    border: none;
+}
+
+.height-100 {
+    height: 100%;
+}
+
+form .form-control, .form-select {
+    border: none;
+    border-bottom: 1px solid #EEEEEE;
+    border-radius: 0px;
+}
 
 /* PROFILE - PREMIUM OFFERS*/
 
