--- a/views/auth/login_form.ejs
+++ b/views/auth/login_form.ejs
@@ -2,17 +2,17 @@
 <div class="container forms-background d-flex justify-content-center align-items-center mt-1 mb-5">
     <div class="row">
         <div class="d-flex justify-content-center align-items-center" style="max-width:330px;">
-            <div class="card shadow">
+            <div class="card">
                 <div class="card-body">
                     <div class="text-center">
-                        <h3 class="mb-3 mt-2">Přihlášení</h3>
+                        <h3 class="mb-3 mt-2 color-1">Přihlášení</h3>
                     </div>
                     <form class="row g-3 needs-validation mt-1" novalidate action="/auth/user/login" method="POST">
                         <div class="mt-1">
-                            <input type="email" class="form-control form-control-sm" id="username" name="username" placeholder="E-mail" autofocus required>
+                            <input type="email" class="form-control" id="username" name="username" placeholder="E-mail" autofocus required>
                         </div>
                         <div class="mt-3">
-                            <input type="password" class="form-control form-control-sm" id="password" name="password" placeholder="Heslo" required>
+                            <input type="password" class="form-control" id="password" name="password" placeholder="Heslo" required>
                         </div>
                         <div class="">
                             <button class="btn btn-danger btn-lg w-100 mt-3" type="submit">Přihlásit se</button>
