--- a/views/cards/showAjax.ejs
+++ b/views/cards/showAjax.ejs
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-  <title>InLege</title>
+  <title>InLege - Studuj práva efektivně</title>
   <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
@@ -46,7 +46,7 @@
         <!--PROGRESS STATUS MOBILE-->
         <div class="col-lg-2 mb-3 zobrazovat-jen-na-mobilu">
           <div class="card d-flex flex-row justify-content-center align-items-center">
-            <div class="card-body text-center ">
+            <div class="card-body text-center">
               <p class="text-muted text-smaller mb-1">Karta <span id="progressCardNumMobile"><%= nextNum - 1 %></span> z <%= sectionLength %>
               </p>
               <div class="progress">
@@ -67,13 +67,13 @@
         <div class="col-lg-6 offset-lg-2 mb-3">
           <div class="flip-card" id="flip-card">
             <div class="border-grey flip-card-inner">
-              <div class="card-body flip-card-front pb-0">
+              <div class="card-body flip-card-front pb-0 px-0">
                 <div class="front-main-content d-flex justify-content-center align-items-center">
                   <div id="loaderA"></div>
                   <div class="card-text m-4 text-center" id="pageA"><%- card.pageA %></div>
                 </div>
               </div>
-              <div class="card-body flip-card-back pb-0">
+              <div class="card-body flip-card-back pb-0 px-0">
                 <div class="back-main-content d-flex justify-content-center align-items-center text-gradient">
                   <div id="loaderB"></div>
                   <div class="card-text m-4" id="pageB"><%- card.pageB %></div>
