--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -128,6 +128,10 @@
     height: 100%;
 }
 
+.width-100 {
+    width:100%;
+}
+
 form .form-control, .form-select {
     border: none;
     border-bottom: 1px solid #EEEEEE;
