--- a/views/auth/register_form.ejs
+++ b/views/auth/register_form.ejs
@@ -1,9 +1,9 @@
 <% layout ('layouts/boilerplate.ejs')  %> 
-<div class="container mt-1 mb-5">
+<div class="container mb-5">
     <div class="row">
         <div class="col-lg-4 offset-lg-1 d-flex justify-content-center">
-        <div class="" style="max-width:330px;">
-            <div class="card  height-100">
+        <div class="" style="max-width:400px;">
+            <div class="card height-100">
                 <div class="card-body p-4 px-5">
                 <div class="text-center">
                     <h2 class="mb-3 mt-2 color-1">Registrace</h2>
