redesign login form

--- a/views/auth/register_form.ejs
+++ b/views/auth/register_form.ejs
@@ -6,7 +6,7 @@
             <div class="card height-100">
                 <div class="card-body p-4 px-5">
                 <div class="text-center">
-                    <h2 class="mb-3 mt-2 color-1">Registrace</h2>
+                    <h2 class="mb-3 mt-2">Registrace</h2>
                 </div>
                 <% if (requiresPremium) { %>
                     <form class="row g-3 needs-validation mt-1" novalidate action="/auth/user/new?requiresPremium=true" method="POST">
@@ -77,7 +77,7 @@
             <div class="card height-100 border-none">
                 <div class="card-body">
                     <div class="text-center">
-                        <h3 class="mb-3 mt-2">Jaké jsou hlavní výhody InLege?</h3>
+                        <h3 class="mb-3 mt-2">Jaké jsou hlavní výhody <span class="color-1">InLege</span>?</h3>
                     </div>
                     <div class="row">
                         <div class="col-12 mb-3">
