--- a/views/auth/login_form.ejs
+++ b/views/auth/login_form.ejs
@@ -5,7 +5,7 @@
             <div class="card">
                 <div class="card-body">
                     <div class="text-center">
-                        <h3 class="mb-3 mt-2 color-1">Přihlášení</h3>
+                        <h3 class="mb-3 mt-2">Přihlášení</h3>
                     </div>
                     <form class="row g-3 needs-validation mt-1" novalidate action="/auth/user/login" method="POST">
                         <div class="mt-1">
