--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -37,59 +37,114 @@
             <div class="container d-flex flex-column justify-content-center align-items-center pb-5">
                 <div class="d-flex flex-column justify-content-center align-items-center">
                     <h1 class="jumbotron-heading my-3 mt-5 text-center">InLege <span class="color-1">Premium</span></h1>
-                    <p class="lead text-center w-custom p-3 pb-5"><strong>InLege nabízí stovky kartiček zdarma. Pro opravdové fajnšmekry však máme také rozšířenou nabídku kartiček a další funkce jen za pár korun měsíčně.</strong></p>
+                    <p class="lead text-center w-custom p-3 pb-0"><strong>InLege nabízí stovky kartiček zdarma. Pro opravdové fajnšmekry však máme také rozšířenou nabídku kartiček a další funkce jen za pár korun měsíčně.</strong></p>
                 </div>
-                <div class="price-table-wrapper">
-                    <div class="card premium-plan-card m-4 mt-0">
-                        <div class="card-header">Měsíční</div>
-                        <div class="price-tag-outer d-flex justify-content-center p-3 mt-3">
-                            <div class="price-tag-inner">
-                                <span class="price">149 Kč</span> / <span class="period">měsíčně</span>
+            </div>
+            <div class="container">
+                <div class="row px-lg-5 px-2">
+                    <div class="col-12 col-lg-4 price-table-wrapper">
+                        <div class="card premium-plan-card m-4 mt-0">
+                            <div class="card-header">
+                                <div>
+                                    <p class="card-header-title">Freemium</p>
+                                    <p class="card-header-period">napořád</p>
+                                </div>
                             </div>
-                        </div> 
-                        <p class="text-center my-3">Předplatné Premium placené měsíčně.</p>
-                        <p class="text-center mt-3 mb-1"><b>Co získáš navíc?</b></p>
-                        <p class="text-center my-1" style="font-size:0.8rem">více než 1 200<br> prémiových kartiček</p>
-                        <p class="text-center mt-1 mb-2" style="font-size:0.8rem">funkce ukládání<br> kartiček</p>
-                        <div class="px-3 d-flex justify-content-center">
-                            <% if (!currentUser) { %>
-                                <a href="/auth/user/new?premium=true" class="btn btn-lg btn-danger my-3">Zaregistrovat se a aktivovat</a> 
-                            <% } %>
-                            <% if (currentUser && !currentUser.isPremium) { %>
-                                <a href="#" id="checkout-button-monthly" class="btn btn-lg btn-danger my-3" style="min-width:115px">Aktivovat</a> 
-                            <% } %>
-                            <% if (currentUser && currentUser.isPremium) { %>
-                                <a href="#" class="btn btn-danger my-3 disabled">Tvé předplatné je aktivní</a> 
-                            <% } %>
+                            <div class="height-85">
+                                <div class="price-tag-outer d-flex justify-content-center p-3 mt-3">
+                                    <div class="price-tag-inner">
+                                        <span class="price">0 Kč</span> / <span class="period">napořád</span>
+                                    </div>
+                                </div> 
+                                <p class="text-center my-3">Bezplatná verze aplikace bez časového omezení.</p>
+                                <p class="text-center mt-3 mb-1"><b>Co získáš?</b></p>
+                                <p class="text-center my-1" style="font-size:0.8rem">více než 1 500<br> opakovacích kartiček</p>
+                            </div>
+                            <div class="px-3 d-flex justify-content-center">
+                                <% if (!currentUser) { %>
+                                    <a href="/auth/user/new" class="btn btn-lg btn-danger my-3">Zaregistrovat se a aktivovat</a> 
+                                <% } %>
+                                <% if (currentUser && !currentUser.isPremium) { %>
+                                    <a href="#" id="checkout-button-freemium" class="btn btn-lg btn-danger my-3 disabled" style="min-width:115px">Freemium je aktivní</a> 
+                                <% } %>
+                                <% if (currentUser && currentUser.isPremium) { %>
+                                    <a href="#" class="btn btn-danger my-3 disabled">Premium je aktivní</a> 
+                                <% } %>
+                            </div>
                         </div>
                     </div>
-                    <div class="card premium-plan-card m-4 mt-0">
-                        <div class="card-header">Roční</div>
-                        <div class="price-tag-outer d-flex justify-content-center p-3 mt-3">
-                            <div class="price-tag-inner">
-                                <span class="price">1 290 Kč</span> / <span class="period">ročně</span>
+                    <div class="col-12 col-lg-4 mt-5 mt-lg-0 price-table-wrapper">
+                        <div class="card premium-plan-card m-4 mt-0">
+                            <div class="card-header">
+                                <div>
+                                    <p class="card-header-title">Premium</p>
+                                    <p class="card-header-period">měsíční</p>
+                                </div>
+                            </div>
+                            <div class="price-tag-outer d-flex justify-content-center p-3 mt-3">
+                                <div class="price-tag-inner">
+                                    <span class="price">149 Kč</span> / <span class="period">měsíčně</span>
+                                </div>
                             </div> 
-                        </div>
-                        <p class="text-center my-3">Předplatné Premium se slevou za roční platbu.</p>
-                        <p class="text-center mt-3 mb-1"><b>Co získáš navíc?</b></p>
-                        <p class="text-center my-1" style="font-size:0.8rem">více než 1 200<br> prémiových kartiček</p>
-                        <p class="text-center mt-1 mb-2" style="font-size:0.8rem">funkce ukládání<br> kartiček</p>
-                        <div class="px-3 d-flex justify-content-center">
-                            <% if (!currentUser) { %>
-                                <a href="/auth/user/new?premium=true" class="btn btn-lg btn-danger my-3">Zaregistrovat se a aktivovat</a> 
-                            <% } %>
-                            <% if (currentUser && !currentUser.isPremium) { %>
-                                <a href="#" id="checkout-button-yearly" class="btn btn-lg btn-danger my-3" style="min-width:115px">Aktivovat</a> 
-                            <% } %>
-                            <% if (currentUser && currentUser.isPremium) { %>
-                                <a href="#" class="btn btn-danger my-3 disabled">Tvé předplatné je aktivní</a> 
-                            <% } %>
+                            <div class="height-85">
+                                <p class="text-center my-3">Předplatné Premium placené měsíčně.</p>
+                                <p class="text-center mt-3 mb-1"><b>Co získáš navíc?</b></p>
+                                <p class="text-center my-1" style="font-size:0.8rem">více než 1 200<br> prémiových kartiček</p>
+                                <p class="text-center mt-1 mb-2" style="font-size:0.8rem">funkce ukládání<br> kartiček</p>
+                            </div>
+                            <div class="px-3 d-flex justify-content-center">
+                                <% if (!currentUser) { %>
+                                    <a href="/auth/user/new?premium=true" class="btn btn-lg btn-danger my-3">Zaregistrovat se a aktivovat</a> 
+                                <% } %>
+                                <% if (currentUser && !currentUser.isPremium) { %>
+                                    <a href="#" id="checkout-button-monthly" class="btn btn-lg btn-danger my-3" style="min-width:115px">Aktivovat</a> 
+                                <% } %>
+                                <% if (currentUser && currentUser.isPremium) { %>
+                                    <a href="#" class="btn btn-danger my-3 disabled">Premium je aktivní</a> 
+                                <% } %>
+                            </div>
                         </div>
                     </div>
+                    <div class="col-12 col-lg-4 mt-5 mt-lg-0 price-table-wrapper">
+                        <div class="card premium-plan-card m-4 mt-0">
+                            <div class="card-header">
+                                <div>
+                                    <p class="card-header-title">Premium</p>
+                                    <p class="card-header-period">roční</p>
+                                </div>
+                            </div>
+                            <div class="price-tag-outer d-flex justify-content-center p-3 mt-3">
+                                <div class="price-tag-inner">
+                                    <span class="price">1 290 Kč</span> / <span class="period">ročně</span>
+                                </div> 
+                            </div>
+                            <div class="height-85">
+                                <p class="text-center my-3">Předplatné Premium se slevou za roční platbu.</p>
+                                <p class="text-center mt-3 mb-1"><b>Co získáš navíc?</b></p>
+                                <p class="text-center my-1" style="font-size:0.8rem">více než 1 200<br> prémiových kartiček</p>
+                                <p class="text-center mt-1 mb-2" style="font-size:0.8rem">funkce ukládání<br> kartiček</p>
+                            </div>
+                            <div class="px-3 d-flex justify-content-center">
+                                <% if (!currentUser) { %>
+                                    <a href="/auth/user/new?premium=true" class="btn btn-lg btn-danger my-3">Zaregistrovat se a aktivovat</a> 
+                                <% } %>
+                                <% if (currentUser && !currentUser.isPremium) { %>
+                                    <a href="#" id="checkout-button-yearly" class="btn btn-lg btn-danger my-3" style="min-width:115px">Aktivovat</a> 
+                                <% } %>
+                                <% if (currentUser && currentUser.isPremium) { %>
+                                    <a href="#" class="btn btn-danger my-3 disabled">Premium je aktivní</a> 
+                                <% } %>
+                            </div>
+                        </div>
+                    </div>
+            <div class="row mt-lg-3">
+                <div class="col-12 col-sm-8 offset-sm-2 mt-4">
+                    <div class="d-flex flex-column justify-content-center align-items-center">
+                        <p class=" text-center p-3 pb-5">Předplatné je automaticky měsíčně nebo ročně (dle typu předplatného) strháváno z tvého účtu. <b>Zrušit jej můžeš kdykoliv.</b></p>
+                    </div>
                 </div>
-                <div class="d-flex flex-column justify-content-center align-items-center">
-                    <p class=" text-center w-custom-80 p-3 pb-5">Předplatné je automaticky měsíčně nebo ročně (dle typu předplatného) strháváno z tvého účtu. <b>Zrušit jej můžeš kdykoliv.</b></p>
-                </div>
+            </div>
+            </div>
             </div>
           </section>
         
