--- a/views/index.ejs
+++ b/views/index.ejs
@@ -76,7 +76,7 @@
                             <i class="fas fa-mobile-alt fa-3x color-2 text-muted"></i>
                         </div>
                         <div>
-                            <p class="info-main">Studuj kdykoliv a kdekoliv</p>
+                            <p class="info-main">Opakuj kdykoliv a kdekoliv</p>
                             <p class="info-secondary text-muted">na mobilu i u počítače</p>
                         </div>
                     </div>
@@ -111,7 +111,7 @@
                                     <i class="fas fa-mobile-alt fa-3x color-2 text-muted"></i>
                                 </div>
                                 <div class="col-9">
-                                    <p class="info-main">Studuj kdykoliv a kdekoliv</p>
+                                    <p class="info-main">Opakuj kdykoliv a kdekoliv</p>
                                     <p class="info-secondary text-muted">na mobilu i u počítače</p>
                                 </div>
                             </div>
