--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -46,8 +46,8 @@
                         <div class="card premium-plan-card m-4 mt-0">
                             <div class="card-header">
                                 <div>
-                                    <p class="card-header-title">Freemium</p>
-                                    <p class="card-header-period">napořád</p>
+                                    <p class="card-header-title">Start</p>
+                                    <p class="card-header-period">zdarma</p>
                                 </div>
                             </div>
                             <div class="height-85">
@@ -65,10 +65,10 @@
                                     <a href="/auth/user/new" class="btn btn-lg btn-danger my-3">Zaregistrovat se a aktivovat</a> 
                                 <% } %>
                                 <% if (currentUser && !currentUser.isPremium) { %>
-                                    <a href="#" id="checkout-button-freemium" class="btn btn-lg btn-danger my-3 disabled" style="min-width:115px">Freemium je aktivní</a> 
+                                    <a href="#" id="checkout-button-freemium" class="btn btn-lg btn-danger my-3 disabled" style="min-width:115px">Balíček Start je aktivní</a> 
                                 <% } %>
                                 <% if (currentUser && currentUser.isPremium) { %>
-                                    <a href="#" class="btn btn-danger my-3 disabled">Premium je aktivní</a> 
+                                    <a href="#" class="btn btn-danger my-3 disabled">Je aktivní balíček Premium</a> 
                                 <% } %>
                             </div>
                         </div>
@@ -100,7 +100,7 @@
                                     <a href="#" id="checkout-button-monthly" class="btn btn-lg btn-danger my-3" style="min-width:115px">Aktivovat</a> 
                                 <% } %>
                                 <% if (currentUser && currentUser.isPremium) { %>
-                                    <a href="#" class="btn btn-danger my-3 disabled">Premium je aktivní</a> 
+                                    <a href="#" class="btn btn-danger my-3 disabled">Je aktivní balíček Premium</a> 
                                 <% } %>
                             </div>
                         </div>
@@ -132,7 +132,7 @@
                                     <a href="#" id="checkout-button-yearly" class="btn btn-lg btn-danger my-3" style="min-width:115px">Aktivovat</a> 
                                 <% } %>
                                 <% if (currentUser && currentUser.isPremium) { %>
-                                    <a href="#" class="btn btn-danger my-3 disabled">Premium je aktivní</a> 
+                                    <a href="#" class="btn btn-danger my-3 disabled">Je aktivní balíček Premium</a> 
                                 <% } %>
                             </div>
                         </div>
